deploy/kubernetes/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: app
        image: artemdevopscom/currency-converter:5c0d94c581c9b65432c215c8e029f37f1883705e
